<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>arm_control</name>
  <version>0.0.0</version>
  <description>Robot arm control and description package</description>
  <maintainer email="jasvir11@todo.todo">jasvir11</maintainer>
  <license>TODO: License declaration</license>

  <!-- Python dependencies -->
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>launch_ros</depend>

  <!-- Launch file mein use hone wale nodes -->
  <depend>robot_state_publisher</depend>
  <depend>rviz2</depend>

  <!-- URDF ko process karne ke liye -->
  <depend>xacro</depend>

  <!-- Test dependencies -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

